Fixes related to content overflow in modal dialogs (#250)

--- a/src/main/resources/assets/admin/common/styles/api/ui/dialog/modal-dialog.less
+++ b/src/main/resources/assets/admin/common/styles/api/ui/dialog/modal-dialog.less
@@ -33,7 +33,7 @@
 
   .modal-dialog-header {
     .clearfix();
-    padding: 30px;
+    padding: 30px 30px 10px 30px;
     box-sizing: border-box;
 
     h2 {
@@ -54,7 +54,7 @@
   }
 
   .modal-dialog-body {
-    padding: 15px 30px;
+    padding: 15px 30px 0 30px;
     flex: 1;
     overflow: auto;
     box-sizing: border-box;
@@ -67,6 +67,7 @@
   }
 
   .dialog-content {
+    width: 100%;
     .clearfix();
 
     > p {
@@ -244,7 +245,7 @@
     width: 26px;
     height: 26px;
     line-height: 26px;
-    background-color: white;
+    background-color: @admin-white;
     z-index: 1;
 
     &:before, &:after {
@@ -259,13 +260,17 @@
     &:hover {
       background-color: @admin-white;
       &:before, &:after {
-        background-color: @admin-font-gray2;
+        background-color: @admin-black;
       }
     }
   }
 
-  .grey-header .cancel-button-top {
+  &.grey-header .cancel-button-top {
     background-color: @admin-bg-light-gray;
+
+    &:hover {
+      background-color: @admin-bg-light-gray;
+    }
   }
 }
 
