--- a/src/main/resources/assets/admin/common/styles/api/util/htmlarea/image-dialog.less
+++ b/src/main/resources/assets/admin/common/styles/api/util/htmlarea/image-dialog.less
@@ -1,6 +1,11 @@
 @image-cropping-selector-height: 26px;
 
 .html-area-modal-dialog.image-modal-dialog {
+
+  .modal-dialog-body {
+    max-height: 70vh;
+  }
+
   .hasSelectedItemPreview();
 
   .image-selector {
