--- a/src/main/resources/assets/admin/common/styles/apps/content/publish/content-publish-dialog.less
+++ b/src/main/resources/assets/admin/common/styles/apps/content/publish/content-publish-dialog.less
@@ -10,6 +10,10 @@
     display: block;
   }
 
+  .modal-dialog-body {
+    padding-right: 15px;
+  }
+
   .publish-dialog-item-list {
 
     .browse-selection-item {
