--- a/src/main/resources/assets/admin/common/styles/apps/content/publish/issue-list-dialog.less
+++ b/src/main/resources/assets/admin/common/styles/apps/content/publish/issue-list-dialog.less
@@ -32,6 +32,7 @@
 
     .filters {
       margin-bottom: 20px;
+      padding: 0 5px;
       .flexbox();
 
       .checkbox {
@@ -56,6 +57,7 @@
       .issue-list-item {
         .flexbox();
         justify-content: space-between;
+        padding: 5px 0;
 
         &:hover {
           background-color: @admin-bg-light-gray;
@@ -64,8 +66,6 @@
         &:focus {
           outline: none;
         }
-
-        padding: 5px;
 
         .names-and-icon-view {
           cursor: pointer;
